--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/lyricfind-scrapper:${{ vars.VERSION }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/djientlanding:${{ vars.VERSION }}
